--- a/includes/all_subsets.tex
+++ b/includes/all_subsets.tex
@@ -1,25 +1,25 @@
-\begin{longtable}{l|rr}
+\begin{longtable}{lr}
 \caption*{
-{\large Table 4: All Subsets Deviance R-square Results Across Models}
+{\large Table 6: R\textasciicircum{}2\_\{DEV\} by Sub-model}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/OC \\ 
+ &  \\ 
 \midrule
-ER & $0.1524$ & $0.1655$ \\ 
-AS & $0.1131$ & $0.1204$ \\ 
-SL & $0.0744$ & $0.0749$ \\ 
-WE & $0.1219$ & $0.1323$ \\ 
-ER + AS & $0.1887$ & $0.2097$ \\ 
-ER + SL & $0.2006$ & $0.2215$ \\ 
-ER + WE & $0.2248$ & $0.2553$ \\ 
-AS + SL & $0.1584$ & $0.1734$ \\ 
-AS + WE & $0.1844$ & $0.2059$ \\ 
-SL + WE & $0.1502$ & $0.1650$ \\ 
-ER + AS + SL & $0.2266$ & $0.2552$ \\ 
-ER + AS + WE & $0.2442$ & $0.2795$ \\ 
-ER + SL + WE & $0.2459$ & $0.2806$ \\ 
-AS + SL + WE & $0.2050$ & $0.2309$ \\ 
-ER + AS + SL + WE & $0.2624$ & $0.3014$ \\ 
+SJ \textasciitilde{} ER & $0.1524$ \\ 
+SJ \textasciitilde{} AS & $0.1131$ \\ 
+SJ \textasciitilde{} SL & $0.0744$ \\ 
+SJ \textasciitilde{} WE & $0.1219$ \\ 
+SJ \textasciitilde{} ER + AS & $0.1887$ \\ 
+SJ \textasciitilde{} ER + SL & $0.2006$ \\ 
+SJ \textasciitilde{} ER + WE & $0.2248$ \\ 
+SJ \textasciitilde{} AS + SL & $0.1584$ \\ 
+SJ \textasciitilde{} AS + WE & $0.1844$ \\ 
+SJ \textasciitilde{} SL + WE & $0.1502$ \\ 
+SJ \textasciitilde{} ER + AS + SL & $0.2266$ \\ 
+SJ \textasciitilde{} ER + AS + WE & $0.2442$ \\ 
+SJ \textasciitilde{} ER + SL + WE & $0.2459$ \\ 
+SJ \textasciitilde{} AS + SL + WE & $0.2050$ \\ 
+SJ \textasciitilde{} ER + AS + SL + WE & $0.2624$ \\ 
 \bottomrule
 \end{longtable}
 
