--- a/includes/corr_exp_coeff.tex
+++ b/includes/corr_exp_coeff.tex
@@ -1,17 +1,17 @@
-\begin{longtable}{l|rrrr}
+\begin{longtable}{l|rrrrrr}
 \caption*{
-{\large Table 9: Correlated Exposure Poisson Regression}
+{\large Table 10: Poisson Modeling Results Under Correlated Differential Exposure}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} & \multicolumn{2}{c}{No Offset} & \multicolumn{2}{c}{Offset} \\ 
-\cmidrule(lr){2-3} \cmidrule(lr){4-5}
-\multicolumn{1}{l}{} & Coefficient & IRR & Coefficient & IRR \\ 
+\multicolumn{1}{l}{} & \multicolumn{3}{c}{Without Offset} & \multicolumn{3}{c}{With Offset} \\ 
+\cmidrule(lr){2-4} \cmidrule(lr){5-7}
+\multicolumn{1}{l}{} & B & e\textasciicircum{}B & C & B & e\textasciicircum{}B & C \\ 
 \midrule
-(Intercept) & $-0.8011$ & $0.4488$ & $-2.4769$ & $0.0840$ \\ 
-ER & $0.1706$ & $1.1860$ & $0.3081$ & $1.3608$ \\ 
-AS & $0.0934$ & $1.0979$ & $0.1381$ & $1.1480$ \\ 
-SL & $0.0402$ & $1.0410$ & $0.1166$ & $1.1236$ \\ 
-WE & $0.1096$ & $1.1158$ & $0.1527$ & $1.1650$ \\ 
+ER & $0.1706$ & $1.1860$ & $0.0305$ & $0.3081$ & $1.3608$ & $0.0881$ \\ 
+AS & $0.0934$ & $1.0979$ & $0.0217$ & $0.1381$ & $1.1480$ & $0.0512$ \\ 
+SL & $0.0402$ & $1.0410$ & $0.0076$ & $0.1166$ & $1.1236$ & $0.0323$ \\ 
+WE & $0.1096$ & $1.1158$ & $0.0311$ & $0.1527$ & $1.1650$ & $0.0677$ \\ 
+Intercept & $-0.8011$ & $0.4488$ &  & $-2.4769$ & $0.0840$ &  \\ 
 \bottomrule
 \end{longtable}
 
