--- a/includes/descrips_exposure.tex
+++ b/includes/descrips_exposure.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{lrrrrrr}
 \caption*{
-{\large Table 6: Descriptive Statistics}
+{\large Table 8: Descriptive Statistics with Differential Exposure}
 } \\ 
 \toprule
  &  &  & \multicolumn{4}{c}{Correlations} \\ 
@@ -8,9 +8,7 @@
 Variable & Mean & Standard Deviation & ER & AS & SL & WE \\ 
 \midrule
 SJ\_RH & $0.5448$ & $0.7610$ & $0.3290$ & $0.2875$ & $0.2291$ & $0.2977$ \\ 
-RH & $5.5186$ & $2.8950$ & $-0.0108$ & $-0.0072$ & $-0.0156$ & $-0.0249$ \\ 
 SJ\_VH & $0.4876$ & $0.6754$ & $0.2265$ & $0.2084$ & $0.1328$ & $0.2254$ \\ 
-VH & $5.5400$ & $2.8955$ & $-0.3736$ & $-0.3036$ & $-0.2978$ & $-0.2983$ \\ 
 \bottomrule
 \end{longtable}
 
