--- a/includes/descrips_initial.tex
+++ b/includes/descrips_initial.tex
@@ -1,18 +1,17 @@
-\begin{longtable}{lrrrrrrrr}
+\begin{longtable}{lrrrrrrr}
 \caption*{
-{\large Table 1: Descriptive Statistics}
+{\large Table 4: Descriptive Statistics}
 } \\ 
 \toprule
- &  &  & \multicolumn{6}{c}{Correlations} \\ 
-\cmidrule(lr){4-9}
-Variable & Mean & Standard Deviation & ER & AS & SL & WE & SJ & OC \\ 
+ &  &  & \multicolumn{5}{c}{Correlations} \\ 
+\cmidrule(lr){4-8}
+Variable & Mean & Standard Deviation & ER & AS & SL & WE & SJ \\ 
 \midrule
-ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.4175$ & $0.3634$ \\ 
-AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.3592$ & $0.3119$ \\ 
-SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.2913$ & $0.2489$ \\ 
-WE & $0.0144$ & $1.9211$ & $0.2180$ & $0.2850$ & $0.3295$ & $1.0000$ & $0.3726$ & $0.3307$ \\ 
-SJ & $0.9940$ & $1.0082$ & $0.4175$ & $0.3592$ & $0.2913$ & $0.3726$ & $1.0000$ & $0.8771$ \\ 
-OC & $0.9994$ & $1.7591$ & $0.3634$ & $0.3119$ & $0.2489$ & $0.3307$ & $0.8771$ & $1.0000$ \\ 
+ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.4175$ \\ 
+AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.3592$ \\ 
+SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.2913$ \\ 
+WE & $0.0144$ & $1.9211$ & $0.2180$ & $0.2850$ & $0.3295$ & $1.0000$ & $0.3726$ \\ 
+SJ & $0.9940$ & $1.0082$ & $0.4175$ & $0.3592$ & $0.2913$ & $0.3726$ & $1.0000$ \\ 
 \bottomrule
 \end{longtable}
 
