--- a/includes/gen_dom.tex
+++ b/includes/gen_dom.tex
@@ -1,15 +1,14 @@
-\begin{longtable}{l|rr}
+\begin{longtable}{l|r}
 \caption*{
-{\large Table 5: General Dominance Statistics}
+{\large Table 7: General Dominance Statistics}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/OC \\ 
+\multicolumn{1}{l}{} &  \\ 
 \midrule
-ER & $0.0965$ & $0.1115$ \\ 
-AS & $0.0560$ & $0.0637$ \\ 
-SL & $0.0399$ & $0.0440$ \\ 
-WE & $0.0700$ & $0.0823$ \\ 
-Overall & $0.2624$ & $0.3014$ \\ 
+ER & $0.0965$ \\ 
+AS & $0.0560$ \\ 
+SL & $0.0399$ \\ 
+WE & $0.0700$ \\ 
 \bottomrule
 \end{longtable}
 
