--- a/includes/uncorr_exp_coeff.tex
+++ b/includes/uncorr_exp_coeff.tex
@@ -1,17 +1,17 @@
-\begin{longtable}{l|rrrr}
+\begin{longtable}{l|rrrrrr}
 \caption*{
-{\large Table 7: Uncorrelated Exposure Poisson Regression}
+{\large Table 9: Poisson Modeling Results Under Random Differential Exposure}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} & \multicolumn{2}{c}{No Offset} & \multicolumn{2}{c}{Offset} \\ 
-\cmidrule(lr){2-3} \cmidrule(lr){4-5}
-\multicolumn{1}{l}{} & Coefficient & IRR & Coefficient & IRR \\ 
+\multicolumn{1}{l}{} & \multicolumn{3}{c}{Without Offset} & \multicolumn{3}{c}{With Offset} \\ 
+\cmidrule(lr){2-4} \cmidrule(lr){5-7}
+\multicolumn{1}{l}{} & B & e\textasciicircum{}B & C & B & e\textasciicircum{}B & C \\ 
 \midrule
-(Intercept) & $-0.7812$ & $0.4579$ & $-2.4914$ & $0.0828$ \\ 
-ER & $0.2606$ & $1.2977$ & $0.2683$ & $1.3077$ \\ 
-AS & $0.1225$ & $1.1303$ & $0.1210$ & $1.1287$ \\ 
-SL & $0.1066$ & $1.1125$ & $0.1125$ & $1.1191$ \\ 
-WE & $0.1287$ & $1.1374$ & $0.1360$ & $1.1457$ \\ 
+ER & $0.2606$ & $1.2977$ & $0.0672$ & $0.2683$ & $1.3077$ & $0.0824$ \\ 
+AS & $0.1225$ & $1.1303$ & $0.0410$ & $0.1210$ & $1.1287$ & $0.0490$ \\ 
+SL & $0.1066$ & $1.1125$ & $0.0277$ & $0.1125$ & $1.1191$ & $0.0352$ \\ 
+WE & $0.1287$ & $1.1374$ & $0.0509$ & $0.1360$ & $1.1457$ & $0.0650$ \\ 
+Intercept & $-0.7812$ & $0.4579$ &  & $-2.4914$ & $0.0828$ &  \\ 
 \bottomrule
 \end{longtable}
 
