--- a/includes/poisson_coeff.tex
+++ b/includes/poisson_coeff.tex
@@ -1,17 +1,17 @@
-\begin{longtable}{l|rrrrrrrr}
+\begin{longtable}{l|rrrrr}
 \caption*{
-{\large Table 2: Poisson Regression}
+{\large Table 5: Poisson Regression Predicting Sport Jackets Produced}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{Confidence Interval} &  &  &  &  \\ 
+\multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{95\% Confidence Interval} &  \\ 
 \cmidrule(lr){4-5}
-\multicolumn{1}{l}{} & Coefficient & SE & Low & High & z & p & IRR & Standardized \\ 
+\multicolumn{1}{l}{} & B & SE & Low & High & e\textasciicircum{}B \\ 
 \midrule
-(Intercept) & $-0.1507$ & $0.0138$ & $-0.1780$ & $-0.1237$ & $-10.8803$ & $0.0000$ & $0.8601$ & $0.0000$ \\ 
-ER & $0.2431$ & $0.0114$ & $0.2208$ & $0.2655$ & $21.3445$ & $0.0000$ & $1.2753$ & $0.2882$ \\ 
-AS & $0.1081$ & $0.0095$ & $0.0896$ & $0.1267$ & $11.4006$ & $0.0000$ & $1.1142$ & $0.1567$ \\ 
-SL & $0.0999$ & $0.0083$ & $0.0835$ & $0.1162$ & $11.9832$ & $0.0000$ & $1.1050$ & $0.1546$ \\ 
-WE & $0.1158$ & $0.0069$ & $0.1024$ & $0.1293$ & $16.8297$ & $0.0000$ & $1.1228$ & $0.2226$ \\ 
+ER & $0.2431$ & $0.0114$ & $0.2208$ & $0.2655$ & $1.2753$ \\ 
+AS & $0.1081$ & $0.0095$ & $0.0896$ & $0.1267$ & $1.1142$ \\ 
+SL & $0.0999$ & $0.0083$ & $0.0835$ & $0.1162$ & $1.1050$ \\ 
+WE & $0.1158$ & $0.0069$ & $0.1024$ & $0.1293$ & $1.1228$ \\ 
+Intercept & $-0.1507$ & $0.0138$ & $-0.1780$ & $-0.1237$ & $0.8601$ \\ 
 \bottomrule
 \end{longtable}
 
